20160802:
	* config.h: have it removed because it's not really used.
	Modified other files that relates to config.h

20160801: Version 2.3
	* Makefile: Updated in Windows and dual-GTK distrobution.
	* Makefile: simplest installer to the freedesk desktop.
	* Makefile: clean up the dead macro in Windows build
	* main.c: close the debug in Windows
	* mmgui.c: drop the debug level to warning.

20160729:
	* Makefile: Updated the build system to support GTK3.
	Note that in dual GTK system the GTK3 is the default. 
	It can be overrided by prefix "USE_GTK2=1" to make

20160728:
	* mmgui.c: fixed the missing Ctrl-A in Windows.

20160727: Version 2.2
	* mmgui.c: fixed the problem that displaying "????" in the filenames
	where were encoded by utf-8 in Windows.

20160726:
	* libcsoup: updated to 0.9.2 to re-use the debug functions.

20160721: Version 2.1
	* main.c/mmgui.c: added functions to dump the filename in hex for debug.
	* icons: updated some 64x64 icons.
	* IUP: moved to 3.19.1
	* mmgui_message_popup(): adapte to the size of the system font.

20160720: release 2.0
	* iup/iup_list.c: The Temporary patch can be removed. In iListGetNaturalItemsSize():846:
	  *h += 2*ih->data->spacing;  /* this will be multiplied by the number of lines */
	  *w += 2*ih->data->spacing;  /* include also horizontal spacing */
	changed to
	  /* 20140505 A.Xuming: Temporary solution to go around the IupList too short issue */
	  *h += 2*ih->data->spacing + 1;  /* this will be multiplied by the number of lines */
	  *w += 2*ih->data->spacing;  /* include also horizontal spacing */
	to workaround the IupList can not go to the bottom items. It seems
	fixed above 3.10

20160717:
	* rename.c: remove the overwrite option totally.
	You don't want anything being accidently overwritten by a rename tool.
	If you want, you need to use other tools. Rename tool is not 'mv'
	or 'cp'. It does simply change filenames. If the target file is
	already existed, renamex simply gives up.

20160715: