@@ -1,3 +1,6 @@
+20160803:
+	* libcsoup: updated to 0.9.3 to support the translator chain in logs.
+
 20160802:
 	* config.h: have it removed because it's not really used.
 	Modified other files that relates to config.h
